# neuralgcm

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci-build.yml  ci-experimental.yml
docs/: api.md  checkpoint_modifications.ipynb  checkpoints.md  conf.py  data_preparation.ipynb  datasets.ipynb  index.md  inference_demo.ipynb  installation.md  neuralgcm_datasets.ipynb  neuralgcm_open_datasets.ipynb  overview.md  requirements.txt  trained_models.ipynb
neuralgcm/: __init__.py  api.py  api_test.py  correctors.py  decoders.py  decoders_test.py  demo.py  diagnostics.py  embeddings.py  encoders.py  encoders_test.py  equations.py  features.py  features_test.py  filters.py  forcings.py  forcings_test.py  gin_utils.py  initializers.py  initializers_test.py  integrators.py  layers.py  layers_test.py  mappings.py  mappings_test.py  model_builder.py  model_utils.py  model_utils_test.py  models_test.py  optimization.py  optimization_test.py  orographies.py  parameterizations.py  parameterizations_test.py  perturbations.py  physics_specifications.py  steps.py  stochastic.py  stochastic_test.py  towers.py  (+3 more)
neuralgcm/data/: era5_tl31_19590102T00.nc  tl63_stochastic_mini.pkl
neuralgcm/experimental/: __init__.py  api.py  checkpointing.py  circulation_models.py  coordinates.py  coordinates_test.py  data_specs.py  diagnostics.py  dynamic_io.py  equations.py  interpolators.py  interpolators_test.py  module_utils.py  orographies.py  process_parameterizations.py  pytree_mappings.py  (+22 more)
notebooks/: neuralgcm_inference_demo.ipynb
(+20 files in other folders)
